test/sema/dereference-increment-expr.cx
// RUN: %not %cx -typecheck %s | %FileCheck %s

void f(intSUOJA p) {
    var a = p;

    // CHECK: [[@LINE+1]]:13: error: cannot dereference non-pointer type 'void'
    var b = *(a++);
}
